# dbstore

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  dbstore.conf.example  dbstore.pl.in  dbstore.service.in
debian/: README.Debian  changelog  control  files
debian/source/: include-binaries
init.d/: dbstore.in
rc.d/: dbstore.in
